# patter

./: .gitignore  ARCHITECTURE.md  README.md  dashboard.html  fix_icon.py  hud.html  install.ps1  install.sh  package-lock.json  package.json  release.sh  tailwind.config.js  vite.config.ts
.claude/: launch.json
.github/scripts/: sync_model_mirror.py
.github/workflows/: release.yml  sync-models.yml
docs/: index.html
icon_fix_scripts/: fix_corners.py  fix_icon.py  test_border.py  test_crop.py  test_diagonal.py
src/: DashboardApp.tsx  HUD.tsx  HudApp.tsx  hud_main.tsx  index.css  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  test_media_type.rs  test_shortcut.rs  test_vad.rs  test_whisper.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/rdev-local/src/: lib.rs
src-tauri/rdev-local/src/macos/: common.rs
src-tauri/src/: commands.rs  db.rs  diarize.rs  main.rs  meeting.rs  ollama.rs  paste.rs  permissions.rs  recording.rs  state.rs  tray.rs  vad.rs
src-tauri/src/asr/: mod.rs  parakeet.rs  whisper.rs
src-tauri/src/audio/: capture.rs  levels.rs  mod.rs
src-tauri/src/models/: registry.rs
src/components/ui/: card.tsx  sonner.tsx
src/entries/: dashboard.tsx  hud.tsx
src/features/dashboard/: Dashboard.tsx
src/features/dashboard/components/: AppLogos.tsx  NativeAppIcon.tsx  PageHeader.tsx
src/features/dashboard/views/: AIView.tsx  DashboardView.tsx  DictionaryView.tsx  HistoryView.tsx  MeetingsView.tsx  MemoryView.tsx  ModelsView.tsx  PreferencesView.tsx  SnippetsView.tsx
src/features/hud/: Hud.tsx  RecordingVisualizer.tsx
src/features/onboarding/: Onboarding.tsx
src/fonts/nave-font-family/: iFonts-License.txt
src/lib/: ipc.ts  update.ts
src/views/: DashboardView.tsx  DictionaryView.tsx  HistoryView.tsx  ModelsView.tsx
