[package]
name = "patter"
version = "0.3.10"
description = "Patter - Open Source Voice-to-Text Transcriber"
authors = ["Srikar"]
edition = "2021"

[dependencies]
# Check crates.io for the latest versions before building; these were current
# as of mid-2026. The `metal` feature is what makes whisper.cpp use the GPU.
cpal = "0.15"
whisper-rs = "0.14"
anyhow = "1"
tauri = { version = "2.11.5", features = ["tray-icon", "image", "image-png"] }
tauri-plugin-global-shortcut = "2.3.2"
arboard = "3.6.1"
enigo = "0.6.1"
rustfft = "6.2"
sherpa-onnx = "1.13.4"
reqwest = { version = "0.12", features = ["stream", "blocking", "json"] }
sha2 = "0.10"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
window-vibrancy = "0.7"
rdev = { path = "./rdev-local" }
base64 = "0.22.1"
tokio = { version = "1.53.1", features = ["time", "sync", "macros"] }
tauri-plugin-dialog = "2"
[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }
 
[profile.dev]
# whisper inference in debug mode is painfully slow; keep optimization on
# for dependencies even in dev builds.
opt-level = 1
 
[profile.dev.package."*"]
opt-level = 3

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-notification = "2"
 


[target.'cfg(target_os = "macos")'.dependencies]
# Already in tree via arboard/enigo — direct dep for NSWorkspace frontmost-app lookup.
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication", "NSApplication", "NSImage", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSData"] }
objc2 = "0.6"
block2 = "0.6"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
whisper-rs = { version = "0.14", features = ["metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_ProcessStatus",
] }
